k8s/backapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backapp
  namespace: backend-app
spec:
  type: NodePort
  selector:
    app: backapp
  ports:
    - protocol: TCP
      port: 8887
      targetPort: 8887
      nodePort: 30007


# ---

# apiVersion: v1
# kind: Service
# metadata:
#   name: backapp
#   namespace: backend-app
# spec:
#   selector:
#     app: backapp
#   ports:
#     - protocol: TCP
#       port: 8887
#       targetPort: 8887
#   type: LoadBalancer
